--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <h1 class="heading">About <div class="underline"></div> </h1>
         <p class="information" style="text-align: center;">
-            Hello, my name is Mohneesh Vaidya. I am resident of India. I have done my schooling from Mandi (Himachal Pradesh) and graduation from University Institute Of Technology, Shimla in computer science.
+            Hello, my name is Mohneesh Vaidya. I am resident of India. I have done my schooling from Mandi (Himachal Pradesh) and graduation from University Institute Of Technology, Shimla in computer science (CS).
         </p>
 
     </section>
