--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mohneesh Vaidya's Resume</title>
+    <title>Mohneesh Vaidya</title>
 
     <script src="https://kit.fontawesome.com/7eac48fc07.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css"/>
@@ -23,9 +23,9 @@
             <a href="#skills" class="nav-link">Skills</a>
             <a href="#portfolio" class="nav-link">Portfolio</a>
             <a href="#contact" class="nav-link">Contact</a>
+            <a href="https://drive.google.com/drive/u/1/folders/1bLq0KGHLKUD2LmgVwRcyEaNZERWJbj-r" target="_blank" class="nav-link">Resume</a>
 
             <span id="toggle-nav"> <i class="fa-solid fa-xmark"></i> </span>
-
         </Section>
 
         <h1 id="name">Mohneesh Vaidya</h1>
@@ -48,7 +48,7 @@
 
         <h1 class="heading">About <div class="underline"></div> </h1>
         <p class="information" style="text-align: center;">
-            Hello, my name is Mohneesh Vaidya. I am resident of India. I have done my schooling from Mandi (Himachal Pradesh) and graduation from University Institute Of Technology, Shimla in computer science (CS).
+            Hello, my name is Mohneesh Vaidya. I am resident of India. I have done my schooling from Mandi (Himachal Pradesh) and graduation from University Institute Of Technology, Shimla in computer science.
         </p>
 
     </section>
@@ -116,7 +116,7 @@
             <div class="zig-zag-child">
                 <div class="project">
                     <img class="project-background" src="./Images/code-genertor.jpg" />
-                    <div class="project-link"> <a href="">CodePlayer</a> </div>
+                    <div class="project-link"> <a href="https://github.com/MohneeshVaidya/FrontEndProjects/tree/main/02__CodePlayer" target="_blank">CodePlayer</a> </div>
                 </div>
             </div>
             <div class="zig-zag-child remove"></div>
@@ -153,8 +153,6 @@
                     <th>Name:</th>
                     <td>Mohneesh Vaidya</td>
                 <tr>
-                    <th>Phone:</th><td>+91 89882-26007</td>
-                </tr>
                 <tr>
                     <th>Email:</th><td>mohneesh07@gmail.com</td>
                 </tr>
