--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#skills" class="nav-link">Skills</a>
             <a href="#portfolio" class="nav-link">Portfolio</a>
             <a href="#contact" class="nav-link">Contact</a>
-            <a href="https://drive.google.com/drive/u/1/folders/1bLq0KGHLKUD2LmgVwRcyEaNZERWJbj-r" target="_blank" class="nav-link">Resume</a>
+            <a href="https://drive.google.com/file/d/1K9XiAj8jjCPanY9MQD5jpaGub9OmqWuZ/view?usp=drivesdk" target="_blank" class="nav-link">Resume</a>
 
             <span id="toggle-nav"> <i class="fa-solid fa-xmark"></i> </span>
         </Section>
