--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </li>
             <li>
                 <p>
-                    <b>Graduation: </b> B.Tech - Computer Science and Engineering from University Institute Of Technology (HPU), Shimla - 171001, Himachal Pradesh. <b>Batch - (2018 - 2022)</b>
+                    <b>Graduation: </b> B.Tech - Computer Science and Engineering from University Institute Of Technology (HPU), Shimla - 171001, Himachal Pradesh. <b>B.Tech - (2018 - 2022)</b>
                 </p>
             </li>
         </ul>
